--- a/.eslintrc
+++ b/.eslintrc
@@ -5,12 +5,12 @@
   },
   "extends": [
     "kentcdodds/best-practices",
+    "kentcdodds/es6/best-practices",
     "kentcdodds/possible-errors",
+    "kentcdodds/es6/possible-errors",
     "kentcdodds/import/possible-errors",
     "kentcdodds/import/best-practices",
     "kentcdodds/mocha"
   ],
-  "rules": {
-
-  }
+  "rules": {}
 }
