--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "start",
+  "name": "start-starwars-lib",
   "version": "1.0.0",
   "description": "An Open Source Library for star-wars",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "dependencies": {
-    "abbrev": "^1.1.1",
     "Base64": "^0.2.1",
+    "abbrev": "^1.1.1",
     "acorn": "^3.3.0",
     "ajv": "^6.12.3",
     "align-text": "^0.1.4",
     "amdefine": "^1.0.1",
-    "ansi-escapes": "^1.4.0",
     "ansi": "^0.3.1",
+    "ansi-escapes": "^1.4.0",
     "ansi-regex": "^2.1.1",
-    "anymatch": "^1.3.2",
     "ansi-styles": "^2.2.1",
+    "anymatch": "^1.3.2",
     "append-transform": "^0.4.0",
     "aproba": "^1.2.0",
     "are-we-there-yet": "^1.0.6",
     "argv": "^0.0.2",
-    "arr-flatten": "^1.1.0",
     "arr-diff": "^4.0.0",
+    "arr-flatten": "^1.1.0",
     "arr-union": "^3.1.0",
     "array-find-index": "^1.0.2",
     "array-uniq": "^1.0.3",
@@ -37,8 +37,8 @@
     "asynckit": "^0.4.0",
     "atob": "^2.1.2",
     "aws-sign2": "^0.7.0",
-    "babel-cli": "^6.11.4",
     "aws4": "^1.10.0",
+    "babel-cli": "^6.11.4",
     "babel-code-frame": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-generator": "^6.26.1",
@@ -59,6 +59,7 @@
     "babel-loader": "^6.2.4",
     "babel-messages": "^6.23.0",
     "babel-plugin-check-es2015-constants": "^6.22.0",
+    "babel-plugin-istanbul": "1.0.3",
     "babel-plugin-syntax-async-functions": "^6.13.0",
     "babel-plugin-syntax-async-generators": "^6.13.0",
     "babel-plugin-syntax-class-properties": "^6.13.0",
@@ -111,10 +112,10 @@
     "base64-js": "^1.3.1",
     "bcrypt-pbkdf": "^1.0.2",
     "big.js": "^3.2.0",
+    "bin-version": "^1.0.4",
     "bin-version-check": "^2.1.0",
     "binary-extensions": "^1.13.1",
     "brace-expansion": "^1.1.11",
-    "bin-version": "^1.0.4",
     "braces": "^1.8.5",
     "browser-stdout": "^1.3.0",
     "browserify-zlib": "^0.1.4",
@@ -154,6 +155,7 @@
     "copy-descriptor": "^0.1.1",
     "core-js": "^2.6.11",
     "core-util-is": "^1.0.2",
+    "cross-env": "7.0.2",
     "cross-spawn": "^4.0.2",
     "cross-spawn-async": "^2.2.5",
     "crypto-browserify": "^3.2.8",
@@ -189,8 +191,8 @@
     "esutils": "^2.0.3",
     "event-stream": "^3.3.4",
     "events": "^1.1.1",
-    "execa": "^0.4.0",
     "execSync": "^1.0.2",
+    "execa": "^0.4.0",
     "exit-hook": "^1.1.1",
     "expand-brackets": "^0.1.5",
     "expand-range": "^1.8.2",
@@ -214,8 +216,8 @@
     "for-in": "^1.0.2",
     "for-own": "^0.1.5",
     "foreachasync": "^3.0.0",
-    "forever-agent": "^0.6.1",
     "foreground-child": "^1.5.6",
+    "forever-agent": "^0.6.1",
     "form-data": "^2.3.3",
     "fragment-cache": "^0.2.1",
     "from": "^0.1.7",
@@ -239,9 +241,9 @@
     "globals": "^9.18.0",
     "graceful-fs": "^4.2.4",
     "graceful-readlink": "^1.0.1",
+    "growl": "^1.9.2",
     "handlebars": "^4.7.6",
     "har-schema": "^2.0.0",
-    "growl": "^1.9.2",
     "har-validator": "^5.1.3",
     "has": "^1.0.3",
     "has-ansi": "^2.0.0",
@@ -277,8 +279,8 @@
     "is-dotfile": "^1.0.3",
     "is-equal-shallow": "^0.1.3",
     "is-extendable": "^0.1.1",
-    "is-finite": "^1.1.0",
     "is-extglob": "^1.0.0",
+    "is-finite": "^1.1.0",
     "is-fullwidth-code-point": "^1.0.0",
     "is-glob": "^2.0.1",
     "is-number": "^3.0.0",
@@ -353,12 +355,13 @@
     "merge": "^1.2.1",
     "micromatch": "^2.3.11",
     "mime": "^1.6.0",
-    "mime-types": "^2.1.27",
     "mime-db": "^1.44.0",
+    "mime-types": "^2.1.27",
     "minimatch": "^3.0.4",
     "minimist": "^1.2.5",
     "mixin-deep": "^1.3.2",
     "mkdirp": "^0.5.5",
+    "mocha": "^3.0.1",
     "ms": "^2.0.0",
     "mute-stream": "^0.0.6",
     "nanomatch": "^1.2.13",
@@ -390,9 +393,9 @@
     "opt-cli": "^1.5.1",
     "optimist": "^0.6.1",
     "os-browserify": "^0.1.2",
+    "os-homedir": "^1.0.2",
     "os-locale": "^1.4.0",
     "os-shim": "^0.1.3",
-    "os-homedir": "^1.0.2",
     "os-tmpdir": "^1.0.2",
     "osenv": "^0.1.5",
     "output-file-sync": "^1.1.2",
@@ -431,10 +434,10 @@
     "querystring": "^0.2.0",
     "querystring-es3": "^0.2.1",
     "randomatic": "^3.1.1",
-    "read-pkg-up": "^1.0.1",
     "read-pkg": "^1.1.0",
-    "readdirp": "^2.2.1",
+    "read-pkg-up": "^1.0.1",
     "readable-stream": "^2.3.7",
+    "readdirp": "^2.2.1",
     "redent": "^1.0.0",
     "regenerate": "^1.4.1",
     "regenerator-runtime": "^0.10.5",
@@ -460,14 +463,14 @@
     "retry": "^0.10.1",
     "right-align": "^0.1.3",
     "rimraf": "^2.5.4",
-    "run-async": "^2.4.1",
     "ripemd160": "^0.2.0",
+    "run-async": "^2.4.1",
     "run-auto": "^1.1.3",
     "run-series": "^1.1.8",
     "rx": "^4.1.0",
     "safe-buffer": "^5.1.2",
-    "safer-buffer": "^2.1.2",
     "safe-regex": "^1.1.0",
+    "safer-buffer": "^2.1.2",
     "semantic-release": "^4.3.5",
     "semver": "^5.7.1",
     "semver-regex": "^1.0.0",
@@ -477,8 +480,8 @@
     "sha.js": "^2.2.6",
     "shell-quote": "^1.7.2",
     "shelljs": "^0.5.3",
-    "slash": "^1.0.0",
     "signal-exit": "^3.0.3",
+    "slash": "^1.0.0",
     "slide": "^1.1.6",
     "snapdragon": "^0.8.2",
     "snapdragon-node": "^2.1.1",
@@ -568,14 +571,17 @@
     "yargs": "^4.8.1",
     "yargs-parser": "^2.4.1"
   },
-  "devDependencies": {
-    "mocha": "^3.0.1"
-  },
+  "devDependencies": {},
   "scripts": {
-    "test": "nyc mocha",
+    "test": "cross-env NODE_ENV=test nyc mocha",
     "watch:test": "mocha --watch",
     "lint": "eslint src",
-    "validate": "npm-run-all --parallel lint test"
+    "validate": "npm-run-all --parallel lint test build",
+    "prebuild": "rimraf dist",
+    "build:main": "babel --copy-files --out-dir dist --ignore *.test.js src",
+    "build:umd": "webpack --output-filename index.umd.js",
+    "build:umd.min": "webpack --output-filename index.umd.min.js -p",
+    "build": "npm-run-all --parallel build:*"
   },
   "repository": {
     "type": "git",
@@ -585,28 +591,49 @@
     "star-wars"
   ],
   "author": "Jose",
+  "files": [
+    "dist"
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/jslvtr98/my_oss_lib/issues"
   },
   "homepage": "https://github.com/jslvtr98/my_oss_lib#readme",
   "nyc": {
+    "all": true,
     "check-coverage": true,
-    "branches": 100,
-    "functions": 100,
-    "lines": 100,
-    "statements": 100,
+    "branches": 75,
+    "functions": 75,
+    "lines": 75,
+    "statements": 75,
     "reporter": [
       "text",
       "lcov"
     ],
     "include": [
       "src"
+    ],
+    "sourceMap": "false",
+    "instrument": "false",
+    "require": [
+      "babel-register"
     ]
   },
   "config": {
     "ghooks": {
       "pre-commit": "npm run validate"
+    }
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ],
+    "env": {
+      "test": {
+        "plugins": [
+          "istanbul"
+        ]
+      }
     }
   }
 }
