--- a/package.json
+++ b/package.json
@@ -585,7 +585,7 @@
     "build:umd.min": "webpack --output-filename index.umd.min.js -p",
     "build": "npm-run-all --parallel build:*",
     "report-coverage": "cat ./coverage/lcov.info | codecov",
-    "semantic-release": "semantic-release",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post",
     "commit": "git-cz"
   },
   "repository": {
